tests/jastadd/negative/type_errors/L1/7_CombiningIntegerAndBoolean.ob
MODULE TestModule;
    VAR a : INTEGER;
        b : BOOLEAN;
BEGIN
    a := 1 * (2 + 3);
    b := TRUE & FALSE;
    a := b + a
END TestModule.
